[metadata]
name = pxsrt
version = 1.0.0
description = pxsrt is a package that sorts the pixels of an image
long_description = file: README.md
long_description_content_type = text/markdown
author = Oliver Prince
author_email = oprince.tech@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    Pillow>=8.1.0
    numpy>=1.20.0rc2
    wheel
python_requires = >=3.8.5

[options.entry_points]
console_scripts =
    pxsrt = pxsrt.main:main
